--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,7 @@
     "name": "mvc/src",
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
-            "App\\Model\\": "src/Model/",
-            "App\\Model\\Abstract\\": "src/Model/Abstract",
-            "App\\Model\\Interface\\": "src/Model/Interface",
-            "App\\View\\": "src/View",
-            "App\\Controller\\": "src/Controller/"
+            "App\\": "src/"
         }
     },
     "authors": [
@@ -17,7 +12,7 @@
         }
     ],
     "require": {
-        "altorouter/altorouter": "2.0.2",
+        "altorouter/altorouter": "2.0",
         "ext-pdo": "*"
     }
 }
